# xandrio

./: .dockerignore  .env.template  .gitignore  .gitleaks.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  GOVERNANCE.md  IPHONE-TEST.md  LEGAL-NOTICE.md  LICENSE  PREMIUM-AUDIO-UX.md  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  docker-compose.local-engines.yml  docker-compose.yml  package-lock.json  package.json  server.js  umbrel-app-store.yml  xandrio.service.template
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
alexandrio-xandrio/: README.md  docker-compose.yml  umbrel-app.yml
docs/: ACCEPTED_RISKS.md  API.md  ARCHITECTURE.md  ASSET_PROVENANCE.md  AZURE_SPEECH_PROVIDER_PROPOSAL.md  CHANGELOG.md  CLEANUP-REPORT.md  CONNECTOR_POLICY.md  COVER_RELIABILITY_PLAN.md  CROSS_SOURCE_WORK_RESOLUTION_PLAN.md  CURRENT_IMAGE_SECURITY.md  DEPLOYMENT_TOPOLOGY.md  FEATURE_MATRIX.md  HANDOFF-HIDDEN-FEATURES.md  HANDOFF-STRUCTURAL-DEBT.md  OPEN_SOURCE_RELEASE_PLAN.md  PDF-AUDIOBOOK-RESEARCH.md  PERFORMANCE.md  PERIODIC_RISK_REVIEW.md  PRD.md  PRIVACY.md  PROVIDER_COMPATIBILITY.md  PUBLIC_REPOSITORY_BOOTSTRAP.md  RELEASE_APPROVALS.md  RELEASE_CANDIDATE_REPORT.md  RELEASE_PREFLIGHT_2026-07-15.md  RELEASE_TEST_MATRIX.md  SELF_HOSTING.md  THREAT_MODEL.md  UI-REDESIGN-PLAN.md  UMBREL.md  (+1 more)
lib/: accounts.js  (+57 more)
tools/grok-codex/: DISCLAIMER.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  grok_codex_build.py  pyproject.toml
tools/grok-codex/src/grok_codex/: __init__.py  cli.py
tools/grok-codex/tests/: test_cli.py
(+175 files in other folders)
